# colboost

./: .gitignore  README.md  citation.cff  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
colboost/: __init__.py  ensemble.py
colboost/solvers/: cg_boost.py  erlp_boost.py  lp_boost.py  md_boost.py  nm_boost.py  qrlp_boost.py  solver.py
colboost/utils/: predictions.py
tests/: conftest.py  test_core_interface.py  test_csv_data.py  test_data_loading.py  test_interface.py  test_readme_examples.py  test_rewieghting.py  test_solver_api.py  test_solver_gurobi.py  test_solver_variants.py  test_solvers.py  test_weight_reweighting.py
tests/data_for_tests/: breast_cancer.csv  diabetes.csv  waveform.csv
