[project]
name = "colboost"
version = "0.1.0"
description = "LP-based ensemble learning with column generation"
authors = [
    { name = "Fabian Akkerman" },
    { name = "Julien Ferry" }
]
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "numpy",
    "scikit-learn",
    "gurobipy"
]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[tool.setuptools.package-data]
colboost = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
